monitoring-manifests/ingressroutes.yaml
---
# Prometheus IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metrics.authoritah.com`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
      middlewares:
        - name: authelia-forwardauth
          namespace: default
  tls:
    secretName: prometheus-tls
---
# Alertmanager IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alerts.authoritah.com`)
      kind: Rule
      services:
        - name: alertmanager-operated
          port: 9093
      middlewares:
        - name: authelia-forwardauth
          namespace: default
  tls:
    secretName: alertmanager-tls
---
# Grafana IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.authoritah.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: authelia-forwardauth
          namespace: default
  tls:
    secretName: grafana-tls
